feat: 增加 UpdateServer DeleteServer
