# api/configure/server/v1/configure_server_service_grpc.pb.go
@@ -21,6 +21,8 @@ const _ = grpc.SupportPackageIsVersion9
 const (
 	Server_CreateServer_FullMethodName = "/configure.api.configure.server.v1.Server/CreateServer"
 	Server_ListServer_FullMethodName   = "/configure.api.configure.server.v1.Server/ListServer"
+	Server_UpdateServer_FullMethodName = "/configure.api.configure.server.v1.Server/UpdateServer"
+	Server_DeleteServer_FullMethodName = "/configure.api.configure.server.v1.Server/DeleteServer"
 )
 
 // ServerClient is the client API for Server service.
@@ -31,6 +33,8 @@ type ServerClient interface {
 	CreateServer(ctx context.Context, in *CreateServerRequest, opts ...grpc.CallOption) (*CreateServerReply, error)
 	// ListServer 获取服务信息列表
 	ListServer(ctx context.Context, in *ListServerRequest, opts ...grpc.CallOption) (*ListServerReply, error)
+	UpdateServer(ctx context.Context, in *UpdateServerRequest, opts ...grpc.CallOption) (*UpdateServerReply, error)
+	DeleteServer(ctx context.Context, in *DeleteServerRequest, opts ...grpc.CallOption) (*DeleteServerReply, error)
 }
 
 type serverClient struct {
@@ -61,6 +65,26 @@ func (c *serverClient) ListServer(ctx context.Context, in *ListServerRequest, op
 	return out, nil
 }
 
+func (c *serverClient) UpdateServer(ctx context.Context, in *UpdateServerRequest, opts ...grpc.CallOption) (*UpdateServerReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(UpdateServerReply)
+	err := c.cc.Invoke(ctx, Server_UpdateServer_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *serverClient) DeleteServer(ctx context.Context, in *DeleteServerRequest, opts ...grpc.CallOption) (*DeleteServerReply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(DeleteServerReply)
+	err := c.cc.Invoke(ctx, Server_DeleteServer_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ServerServer is the server API for Server service.
 // All implementations must embed UnimplementedServerServer
 // for forward compatibility.
@@ -69,6 +93,8 @@ type ServerServer interface {
 	CreateServer(context.Context, *CreateServerRequest) (*CreateServerReply, error)
 	// ListServer 获取服务信息列表
 	ListServer(context.Context, *ListServerRequest) (*ListServerReply, error)
+	UpdateServer(context.Context, *UpdateServerRequest) (*UpdateServerReply, error)
+	DeleteServer(context.Context, *DeleteServerRequest) (*DeleteServerReply, error)
 	mustEmbedUnimplementedServerServer()
 }
 
@@ -84,6 +110,12 @@ func (UnimplementedServerServer) CreateServer(context.Context, *CreateServerRequ
 }
 func (UnimplementedServerServer) ListServer(context.Context, *ListServerRequest) (*ListServerReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ListServer not implemented")
+}
+func (UnimplementedServerServer) UpdateServer(context.Context, *UpdateServerRequest) (*UpdateServerReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateServer not implemented")
+}
+func (UnimplementedServerServer) DeleteServer(context.Context, *DeleteServerRequest) (*DeleteServerReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteServer not implemented")
 }
 func (UnimplementedServerServer) mustEmbedUnimplementedServerServer() {}
 func (UnimplementedServerServer) testEmbeddedByValue()                {}
@@ -142,6 +174,42 @@ func _Server_ListServer_Handler(srv interface{}, ctx context.Context, dec func(i
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Server_UpdateServer_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateServerRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServerServer).UpdateServer(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Server_UpdateServer_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServerServer).UpdateServer(ctx, req.(*UpdateServerRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Server_DeleteServer_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteServerRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ServerServer).DeleteServer(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Server_DeleteServer_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ServerServer).DeleteServer(ctx, req.(*DeleteServerRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Server_ServiceDesc is the grpc.ServiceDesc for Server service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -156,6 +224,14 @@ var Server_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ListServer",
 			Handler:    _Server_ListServer_Handler,
+		},
+		{
+			MethodName: "UpdateServer",
+			Handler:    _Server_UpdateServer_Handler,
+		},
+		{
+			MethodName: "DeleteServer",
+			Handler:    _Server_DeleteServer_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
